--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,88 @@
 
 @string{aps = {American Physical Society,}}
 
+@inproceedings{bang-etal-2023-multitask,
+    title = "A Multitask, Multilingual, Multimodal Evaluation of {C}hat{GPT} on Reasoning, Hallucination, and Interactivity",
+    author = "Bang, Yejin  and
+      Cahyawijaya, Samuel  and
+      Lee, Nayeon  and
+      Dai, Wenliang  and
+      Su, Dan  and
+      Wilie, Bryan  and
+      Lovenia, Holy  and
+      Ji, Ziwei  and
+      Yu, Tiezheng  and
+      Chung, Willy  and
+      Do, Quyet V.  and
+      Xu, Yan  and
+      Fung, Pascale",
+    editor = "Park, Jong C.  and
+      Arase, Yuki  and
+      Hu, Baotian  and
+      Lu, Wei  and
+      Wijaya, Derry  and
+      Purwarianti, Ayu  and
+      Krisnadhi, Adila Alfa",
+    booktitle = "Proceedings of the 13th International Joint Conference on Natural Language Processing and the 3rd Conference of the Asia-Pacific Chapter of the Association for Computational Linguistics (Volume 1: Long Papers)",
+    month = nov,
+    year = "2023",
+    address = "Nusa Dua, Bali",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2023.ijcnlp-main.45",
+    pages = "675--718",
+}
+
+@inproceedings{cahyawijaya2023nusacrowd,
+  title={NusaCrowd: Open source initiative for Indonesian NLP resources},
+  author={Cahyawijaya, Samuel and Lovenia, Holy and Aji, Alham Fikri and Winata, Genta and Wilie, Bryan and Koto, Fajri and Mahendra, Rahmad and Wibisono, Christian and Romadhony, Ade and Vincentio, Karissa and others},
+  booktitle={Findings of the Association for Computational Linguistics: ACL 2023},
+  pages={13745--13818},
+  year={2023}
+}
+
+@inproceedings{wilie2020indonlu,
+  title={IndoNLU: Benchmark and Resources for Evaluating Indonesian Natural Language Understanding},
+  author={Wilie, Bryan and Vincentio, Karissa and Winata, Genta Indra and Cahyawijaya, Samuel and Li, Xiaohong and Lim, Zhi Yuan and Soleman, Sidik and Mahendra, Rahmad and Fung, Pascale and Bahar, Syafri and others},
+  booktitle={Proceedings of the 1st Conference of the Asia-Pacific Chapter of the Association for Computational Linguistics and the 10th International Joint Conference on Natural Language Processing},
+  pages={843--857},
+  year={2020}
+}
+
+@inproceedings{ishii2023contrastive,
+  title={Contrastive Learning for Inference in Dialogue},
+  author={Ishii, Etsuko and Xu, Yan and Wilie, Bryan and Ji, Ziwei and Lovenia, Holy and Chung, Willy and Fung, Pascale},
+  booktitle={Proceedings of the 2023 Conference on Empirical Methods in Natural Language Processing},
+  pages={10202--10221},
+  year={2023}
+}
+
+@inproceedings{chung-etal-2023-instructtods,
+    title = "{I}nstruct{TODS}: Large Language Models for End-to-End Task-Oriented Dialogue Systems",
+    author = "Chung, Willy  and
+      Cahyawijaya, Samuel  and
+      Wilie, Bryan  and
+      Lovenia, Holy  and
+      Fung, Pascale",
+    editor = "Chen, Kehai  and
+      Ku, Lun-Wei",
+    booktitle = "Proceedings of the Second Workshop on Natural Language Interfaces",
+    month = nov,
+    year = "2023",
+    address = "Bali, Indonesia",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2023.nlint-1.1",
+    pages = "1--21",
+}
+
+@inproceedings{wilie2023pick,
+  title={PICK: Polished \& Informed Candidate Scoring for Knowledge-Grounded Dialogue Systems},
+  author={Wilie, Bryan and Xu, Yan and Chung, Willy and Cahyawijaya, Samuel and Lovenia, Holy and Fung, Pascale},
+  booktitle={Proceedings of the 13th International Joint Conference on Natural Language Processing and the 3rd Conference of the Asia-Pacific Chapter of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  pages={980--995},
+  year={2023}
+}
+
+
 @book{einstein1956investigations,
   bibtex_show={true},
   title={Investigations on the Theory of the Brownian Movement},
