--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -81,7 +81,8 @@
   author={Wilie, Bryan and Xu, Yan and Chung, Willy and Cahyawijaya, Samuel and Lovenia, Holy and Fung, Pascale},
   booktitle={Proceedings of the 13th International Joint Conference on Natural Language Processing and the 3rd Conference of the Asia-Pacific Chapter of the Association for Computational Linguistics (Volume 1: Long Papers)},
   pages={980--995},
-  year={2023}
+  year={2023},
+  selected={true}
 }
 
 
