--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -150,3 +150,72 @@
   pages={160--172},
   year={2022}
 }
+
+@inproceedings{lovenia2022every,
+  title={Every picture tells a story: Image-grounded controllable stylistic story generation},
+  author={Lovenia, Holy and Wilie, Bryan and Barraud, Romain and Cahyawijaya, Samuel and Chung, Willy and Fung, Pascale},
+  booktitle={Proceedings of the 6th Joint SIGHUM Workshop on Computational Linguistics for Cultural Heritage, Social Sciences, Humanities and Literature},
+  pages={40--52},
+  year={2022}
+}
+
+
+@inproceedings{gehrmann2022gemv2,
+  title={GEMv2: Multilingual NLG Benchmarking in a Single Line of Code},
+  author={Gehrmann, Sebastian and Bhattacharjee, Abhik and Mahendiran, Abinaya and Wang, Alex and Papangelis, Alexandros and Madaan, Aman and Mcmillan-major, Angelina and Shvets, Anna and Upadhyay, Ashish and Bohnet, Bernd},
+  booktitle={Proceedings of the The 2022 Conference on Empirical Methods in Natural Language Processing: System Demonstrations},
+  pages={266--281},
+  year={2022}
+}
+
+@inproceedings{ishii2022integrating,
+  title={Integrating Question Rewrites in Conversational Question Answering: A Reinforcement Learning Approach},
+  author={Ishii, Etsuko and Wilie, Bryan and Xu, Yan and Cahyawijaya, Samuel and Fung, Pascale},
+  booktitle={Proceedings of the 60th Annual Meeting of the Association for Computational Linguistics: Student Research Workshop},
+  pages={55--66},
+  year={2022}
+}
+
+@inproceedings{ishii2022can,
+  title={Can Question Rewriting Help Conversational Question Answering?},
+  author={Ishii, Etsuko and Xu, Yan and Cahyawijaya, Samuel and Wilie, Bryan},
+  booktitle={Proceedings of the Third Workshop on Insights from Negative Results in NLP},
+  pages={94--99},
+  year={2022}
+}
+
+
+@inproceedings{lovenia-etal-2022-clozer,
+    title = "Clozer{''}:{''} Adaptable Data Augmentation for Cloze-style Reading Comprehension",
+    author = "Lovenia, Holy  and
+      Wilie, Bryan  and
+      Chung, Willy  and
+      Min, Zeng  and
+      Cahyawijaya, Samuel  and
+      Su, Dan  and
+      Fung, Pascale",
+    editor = "Gella, Spandana  and
+      He, He  and
+      Majumder, Bodhisattwa Prasad  and
+      Can, Burcu  and
+      Giunchiglia, Eleonora  and
+      Cahyawijaya, Samuel  and
+      Min, Sewon  and
+      Mozes, Maximilian  and
+      Li, Xiang Lorraine  and
+      Augenstein, Isabelle  and
+      Rogers, Anna  and
+      Cho, Kyunghyun  and
+      Grefenstette, Edward  and
+      Rimell, Laura  and
+      Dyer, Chris",
+    booktitle = "Proceedings of the 7th Workshop on Representation Learning for NLP",
+    month = may,
+    year = "2022",
+    address = "Dublin, Ireland",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2022.repl4nlp-1.7",
+    doi = "10.18653/v1/2022.repl4nlp-1.7",
+    pages = "60--66",
+    abstract = "Task-adaptive pre-training (TAPT) alleviates the lack of labelled data and provides performance lift by adapting unlabelled data to downstream task. Unfortunately, existing adaptations mainly involve deterministic rules that cannot generalize well. Here, we propose Clozer, a sequence-tagging based cloze answer extraction method used in TAPT that is extendable for adaptation on any cloze-style machine reading comprehension (MRC) downstream tasks. We experiment on multiple-choice cloze-style MRC tasks, and show that Clozer performs significantly better compared to the oracle and state-of-the-art in escalating TAPT effectiveness in lifting model performance, and prove that Clozer is able to recognize the gold answers independently of any heuristics.",
+}
