--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -219,3 +219,25 @@
     pages = "60--66",
     abstract = "Task-adaptive pre-training (TAPT) alleviates the lack of labelled data and provides performance lift by adapting unlabelled data to downstream task. Unfortunately, existing adaptations mainly involve deterministic rules that cannot generalize well. Here, we propose Clozer, a sequence-tagging based cloze answer extraction method used in TAPT that is extendable for adaptation on any cloze-style machine reading comprehension (MRC) downstream tasks. We experiment on multiple-choice cloze-style MRC tasks, and show that Clozer performs significantly better compared to the oracle and state-of-the-art in escalating TAPT effectiveness in lifting model performance, and prove that Clozer is able to recognize the gold answers independently of any heuristics.",
 }
+
+
+@article{bang2022towards,
+  title={Towards Answering Open-ended Ethical Quandary Questions},
+  author={Bang, Yejin and Lee, Nayeon and Yu, Tiezheng and Khalatbari, Leila and Xu, Yan and Cahyawijaya, Samuel and Su, Dan and Wilie, Bryan and Barraud, Romain and Barezi, Elham J and others}
+}
+
+@article{dhole2023nl,
+  title={NL-Augmenter: A Framework for Task-Sensitive Natural Language Augmentation},
+  author={Dhole, Kaustubh and Gangal, Varun and Gehrmann, Sebastian and Gupta, Aadesh and Li, Zhenhao and Mahamood, Saad and Mahadiran, Abinaya and Mille, Simon and Shrivastava, Ashish and Tan, Samson and others},
+  journal={Northern European Journal of Language Technology},
+  volume={9},
+  number={1},
+  year={2023}
+}
+
+@article{cahyawijaya2021greenformer,
+  title={Greenformer: Factorization toolkit for efficient deep neural networks},
+  author={Cahyawijaya, Samuel and Winata, Genta Indra and Lovenia, Holy and Wilie, Bryan and Dai, Wenliang and Ishii, Etsuko and Fung, Pascale},
+  journal={arXiv preprint arXiv:2109.06762},
+  year={2021}
+}
