--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -238,6 +238,6 @@
 @article{cahyawijaya2021greenformer,
   title={Greenformer: Factorization toolkit for efficient deep neural networks},
   author={Cahyawijaya, Samuel and Winata, Genta Indra and Lovenia, Holy and Wilie, Bryan and Dai, Wenliang and Ishii, Etsuko and Fung, Pascale},
-  journal={arXiv preprint arXiv:2109.06762},
+  url = "https://arxiv.org/abs/2109.06762",
   year={2021}
 }
