--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -223,7 +223,9 @@
 
 @article{bang2022towards,
   title={Towards Answering Open-ended Ethical Quandary Questions},
-  author={Bang, Yejin and Lee, Nayeon and Yu, Tiezheng and Khalatbari, Leila and Xu, Yan and Cahyawijaya, Samuel and Su, Dan and Wilie, Bryan and Barraud, Romain and Barezi, Elham J and others}
+  author={Bang, Yejin and Lee, Nayeon and Yu, Tiezheng and Khalatbari, Leila and Xu, Yan and Cahyawijaya, Samuel and Su, Dan and Wilie, Bryan and Barraud, Romain and Barezi, Elham J and others},
+  url = "https://amulyayadav.github.io/AI4SG2023/images/22.pdf",
+  booktitle = "Proceedings of the Workshop on Artificial Intelligence for Social Good"
 }
 
 @article{dhole2023nl,
