--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -244,3 +244,11 @@
   url = "https://arxiv.org/abs/2109.06762",
   year={2021}
 }
+
+@inproceedings{cahyawijaya2021indonlg,
+  title={IndoNLG: Benchmark and Resources for Evaluating Indonesian Natural Language Generation},
+  author={Cahyawijaya, Samuel and Winata, Genta Indra and Wilie, Bryan and Vincentio, Karissa and Li, Xiaohong and Kuncoro, Adhiguna and Ruder, Sebastian and Lim, Zhi Yuan and Bahar, Syafri and Khodra, Masayu and others},
+  booktitle={Proceedings of the 2021 Conference on Empirical Methods in Natural Language Processing},
+  pages={8875--8898},
+  year={2021}
+}
